--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_descriptionFragment2"
             app:destination="@id/descriptionFragment2" />
+        <action
+            android:id="@+id/action_homeFragment_to_category_MealFragment"
+            app:destination="@id/category_MealFragment" />
     </fragment>
     <fragment
         android:id="@+id/favouriteFragment"
@@ -38,23 +41,35 @@
         tools:layout="@layout/fragment_description" >
 
         <argument
-            android:name="image"
+            android:name="id"
             app:argType="string" />
-        <argument
-            android:name="name"
-            app:argType="string" />
-        <argument
-            android:name="description"
-            app:argType="string" />
-        <argument
-            android:name="categort"
-            app:argType="string" />
-        <argument
-            android:name="area"
-            app:argType="string" />
-        <argument
-            android:name="yt"
-            app:argType="string" />
+<!--        <argument-->
+<!--            android:name="name"-->
+<!--            app:argType="string" />-->
+<!--        <argument-->
+<!--            android:name="description"-->
+<!--            app:argType="string" />-->
+<!--        <argument-->
+<!--            android:name="categort"-->
+<!--            app:argType="string" />-->
+<!--        <argument-->
+<!--            android:name="area"-->
+<!--            app:argType="string" />-->
+<!--        <argument-->
+<!--            android:name="yt"-->
+<!--            app:argType="string" />-->
 
+    </fragment>
+    <fragment
+        android:id="@+id/category_MealFragment"
+        android:name="com.example.Category.Category_MealFragment"
+        android:label="fragment_category__meal"
+        tools:layout="@layout/fragment_category__meal" >
+        <argument
+            android:name="category"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_category_MealFragment_to_descriptionFragment2"
+            app:destination="@id/descriptionFragment2" />
     </fragment>
 </navigation>
