--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -135,7 +135,7 @@
         android:layout_marginRight="30dp"
         android:baselineAlignBottom="false"
         android:clickable="true"
-        android:src="@drawable/save"
+        android:src="@drawable/ic_baseline_favorite_24"
         app:backgroundTint="@color/accent"
         app:fabSize="normal"
         app:layout_anchor="@id/appBar"
@@ -150,5 +150,7 @@
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|end"
         android:visibility="gone"/>
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
